Better question design...

--- a/question.html
+++ b/question.html
@@ -86,19 +86,49 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 question_area">
-      <h1 class="question_header">
-        <a class="pull-left">
-          <img src="http://placehold.it/64x64" alt="">
-        </a>
-        What do you think your life will look like in 10 years? <span class="question_author">by <a href="#">GRANTMACDONALD</a></span></h1>
-        <div class="question_body">
-        <div class="lead"> <span class = "question_Q">></span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!
+      <div class="question">
+        <div class="media">
+          <div class="media-left">
+            <a href="#">
+              <img class="media-object user_profile_pic" src="http://placehold.it/64x64" alt="user_image">
+            </a>
+          </div>
+          <div class="media-body question_area">
+            <h3 class="media-heading"> Lumbersexual tacos tbh authentic vaporware, meditation flexitarian tilde vegan roof party gochujang pickled? </h3>
+            <div class="question_details"> asked by
+              <a class="question_author" href="#">mlady</a>
+              on
+              <span class="question_date">04/20/6969</span>
+              in
+              <a class="question_topic" href="#">Lifestyle</a>
+            </div>
+            <hr>
+            <div class="question_body">
+              Lumbersexual tacos tbh authentic vaporware, meditation flexitarian tilde vegan roof party gochujang pickled. Banh mi gentrify austin, VHS bushwick crucifix cornhole brunch humblebrag art party waistcoat. Cray unicorn flexitarian, yuccie keffiyeh biodiesel williamsburg DIY ramps post-ironic kitsch stumptown. Intelligentsia asymmetrical irony chia, you probably haven't heard of them paleo narwhal raclette crucifix. Gochujang echo park deep v tumblr pug VHS, blue bottle next level gluten-free dreamcatcher taxidermy PBR&B kogi. Scenester austin aesthetic, four dollar toast pickled brunch truffaut kale chips four loko synth poutine kitsch taxidermy master cleanse pug. Bicycle rights salvia kale chips, raw denim helvetica tousled VHS woke vaporware biodiesel semiotics gluten-free ramps meditation irony.
+              Disrupt fashion axe 90's sustainable mlkshk wolf. Skateboard lo-fi hot chicken la croix cray raclette. Mlkshk pug locavore meggings +1 helvetica. Blog chicharrones brooklyn meh PBR&B. Stumptown tattooed small batch master cleanse, neutra authentic austin everyday carry scenester godard lomo health goth snackwave waistcoat. Organic master cleanse snackwave brooklyn waistcoat. Hammock raw denim tattooed fap normcore.
+              Subway tile cred bicycle rights enamel pin, fingerstache leggings trust fund edison bulb fanny pack salvia selvage fam locavore. Locavore vexillologist VHS, heirloom semiotics drinking vinegar tote bag mumblecore before they sold out single-origin coffee gluten-free schlitz bespoke tattooed put a bird on it. Ethical mlkshk 8-bit, vape keytar ugh messenger bag tacos selvage cred drinking vinegar williamsburg meh. Banh mi raw denim PBR&B ennui, poutine gluten-free vegan. Pitchfork humblebrag banh mi, letterpress crucifix locavore franzen paleo. Lomo tote bag tumblr cred farm-to-table, hammock ugh vaporware edison bulb synth readymade poke cray air plant listicle. Everyday carry green juice tumeric, literally organic gastropub retro disrupt.
+            </div>
+            <div class="question_coda">
+              <div class="question_tags">
+                <a class="label label-default" href="#">Vegan</a>
+                <a class="label label-default" href="#">Hipster</a>
+                <a class="label label-default" href="#">Food</a>
+                <a class="label label-default" href="#">Satanism</a>
+              </div>
+              <div class="question_votes">
+                <label> Was this question relevant? Please leave a vote! </label>
+                <button type="button" class="btn btn-default">
+                  <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> 10</span>
+                </button>
+                <button type="button" class="btn btn-default">
+                  <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"> 20</span>
+                </button>
+              </div>
+            </div>
+            <hr>
+          </div>
         </div>
       </div>
-      <hr>
     </div>
   </div>
 </div>
