--- a/question.html
+++ b/question.html
@@ -85,6 +85,7 @@
 
 <div class="container">
   <div class="row">
+
     <div class="col-lg-8 question_area">
       <div class="question">
         <div class="media">
@@ -100,7 +101,7 @@
               on
               <span class="question_date">04/20/6969</span>
               in
-              <a class="question_topic" href="#">Lifestyle</a>
+              <a class="question_topic" href="#">lifestyle</a>
             </div>
             <hr>
             <div class="question_body">
@@ -110,13 +111,16 @@
             </div>
             <div class="question_coda">
               <div class="question_tags">
-                <a class="label label-default" href="#">Vegan</a>
-                <a class="label label-default" href="#">Hipster</a>
-                <a class="label label-default" href="#">Food</a>
-                <a class="label label-default" href="#">Satanism</a>
+                <a class="label label-default" href="#">vegan</a>
+                <a class="label label-default" href="#">hipster</a>
+                <a class="label label-default" href="#">food</a>
+                <a class="label label-default" href="#">satanism</a>
               </div>
               <div class="question_votes">
                 <label> Was this question relevant? Please leave a vote! </label>
+                <button type="button" class="btn btn-default">
+                  <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
+                </button>
                 <button type="button" class="btn btn-default">
                   <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> 10</span>
                 </button>
@@ -125,10 +129,126 @@
                 </button>
               </div>
             </div>
-            <hr>
           </div>
         </div>
       </div>
+
+      <hr>
+    </div>
+
+    <div class="col-lg-4 extras">
+
+      <label class="tools_label"> tools <span class="glyphicon glyphicon-wrench"></span></label>
+      <hr>
+      <div class="extras_tools">
+        <button type="button" class="btn btn-default">
+          <span aria-hidden="true"> answer</span>
+        </button>
+        <button type="button" class="btn btn-default">
+          <span aria-hidden="true"> ask a question</span>
+        </button>
+      </div>
+      <hr>
+
+    </div>
+
+    <div class="col-lg-8 answers">
+
+        <div class="answers_header">
+          Answers <span class="answer_no">(2)</span>
+        </div>
+
+        <div class="answer">
+          <div class="media">
+            <div class="media-left">
+              <a href="#">
+                <img class="media-object user_profile_pic" src="http://placehold.it/64x64" alt="user_image" height="50px">
+              </a>
+            </div>
+            <div class="media-body answer_area">
+              <div class="answer_body">
+                Bitch duh XDD
+              </div>
+              <div class="answer_details"> answered by
+                <a class="answer_author" href="#">urhomie</a>
+                on
+                <span class="answer_date">04/20/6969</span>
+                at
+                <span class="answer_hour">15:26</span>
+              </div>
+              <div class="answer_votes">
+                <button type="button" class="btn btn-default comment_btn">
+                  <span aria-hidden="true">comment</span>
+                </button>
+                <button type="button" class="btn btn-default">
+                  <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
+                </button>
+                <button type="button" class="btn btn-default">
+                  <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> 1</span>
+                </button>
+                <button type="button" class="btn btn-default">
+                  <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"> 90</span>
+                </button>
+              </div>
+
+              <hr>
+
+              <div class="comment">
+                <div class="comment_body">
+                  <a class="comment_author" href="#">mlady</a>
+                  This offends me as a vegan transgender atheist who vapes and crossfits 4 times a week and im also a male feminist as I identify myself as a pastafarian apache helicopter dog mega multi combo god of hyper death and if you dont agree with me You're an ignorant arrogant globaphobic sexist lesbian
+                </div>
+                <button type="button" class="btn btn-default">
+                  <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
+                </button>
+              </div>
+
+            </div>
+          </div>
+
+        </div>
+
+        <hr>
+
+        <div class="answer">
+          <div class="media">
+            <div class="media-left">
+              <a href="#">
+                <img class="media-object user_profile_pic" src="http://placehold.it/64x64" alt="user_image" height="50px">
+              </a>
+            </div>
+            <div class="media-body answer_area">
+              <div class="answer_body">
+                The way I see it, every life is a pile of good things and bad things.…hey.…the good things don't always soften the bad things; but vice-versa the bad things don't necessarily spoil the good things and make them unimportant. I'm nobody's taxi service; I'm not gonna be there to catch you every time you feel like jumping out of a spaceship.
+                I hate yogurt. It's just stuff with bits in. I'm nobody's taxi service; I'm not gonna be there to catch you every time you feel like jumping out of a spaceship. *Insistently* Bow ties are cool! Come on Amy, I'm a normal bloke, tell me what normal blokes do!
+                You know when grown-ups tell you 'everything's going to be fine' and you think they're probably lying to make you feel better? Sorry, checking all the water in this area; there's an escaped fish. I am the Doctor, and you are the Daleks!
+                You hate me; you want to kill me! Well, go on! Kill me! KILL ME! Heh-haa! Super squeaky bum time! It's a fez. I wear a fez now. Fezes are cool. It's a fez. I wear a fez now. Fezes are cool. You've swallowed a planet!
+              </div>
+              <div class="answer_details"> answered by
+                <a class="answer_author" href="#">drwhofan</a>
+                on
+                <span class="answer_date">05/20/6969</span>
+                at
+                <span class="answer_hour">20:01</span>
+              </div>
+              <div class="answer_votes">
+                <button type="button" class="btn btn-default comment_btn">
+                  <span aria-hidden="true">comment</span>
+                </button>
+                <button type="button" class="btn btn-default">
+                  <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
+                </button>
+                <button type="button" class="btn btn-default">
+                  <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> 1</span>
+                </button>
+                <button type="button" class="btn btn-default">
+                  <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"> 0</span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr>
     </div>
   </div>
 </div>
