--- a/profile.html
+++ b/profile.html
@@ -87,17 +87,16 @@
 <div class="container-fluid profile">
   <div class="row">
 
-	<div class="col-lg-8">
-
-      <div class="col-lg-4 media">
-           <a href="#">
-             <img class="media-object user_profile_pic2" src="img/profile.png" alt="user_image" height="200em">
-           </a>
+	<div class="col-lg-8 ">
+      <div class="col-lg-1">
+      </div>
+      <div class="col-lg-3 media">
+            <img class="media-object user_profile_pic2" src="img/profile.png" alt="user_image" height="200em">
       </div>
 
       <div class="col-lg-8">
         <div class="profile-username">
-          username
+          mlady
         </div>
         <div class="profile-desc">
           Prism letterpress farm-to-table, food truck butcher seitan tilde tacos glossier affogato activated charcoal kombucha dreamcatcher. Copper mug wayfarers tumeric snackwave normcore, freegan kitsch organic humblebrag kickstarter hella quinoa skateboard. Jean shorts ethical pug, fashion axe wayfarers trust fund YOLO man bun live-edge af brunch mumblecore fam actually thundercats. Master cleanse VHS pork belly, flannel live-edge glossier man bun. Aesthetic celiac you probably haven't heard of them.
@@ -106,10 +105,82 @@
 
   </div>
 
-	<div class="col-lg-4 container">
-	perguntas e respostas
+	<div class="col-lg-4 container-fluid">
+    <div class="col-lg-12 question_area">
+      Questions <span class="answer_no">(1)</span>
+      <div class="question">
+        <div class="media">
+          <div class="media-left">
+            <a href="#">
+              <img class="media-object user_profile_pic" src="http://placehold.it/64x64" alt="user_image">
+            </a>
+          </div>
+          <div class="media-body question_area">
+            <h3 class="media-heading"> Lumbersexual tacos tbh authentic vaporware, meditation flexitarian tilde vegan roof party gochujang pickled? </h3>
+            <div class="question_details"> asked by
+              <a class="question_author" href="#">mlady</a>
+              on
+              <span class="question_date">04/20/6969</span>
+              in
+              <a class="question_topic" href="#">lifestyle</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <hr>
+    </div>
+    <div class="col-lg-12 answer_area">
+      Answers<span class="answer_no">(1)</span>
+      <div class="answer">
+        <div class="media">
+          <div class="media-left">
+            <a href="#">
+              <img class="media-object user_profile_pic" src="http://placehold.it/64x64" alt="user_image" height="50px">
+            </a>
+          </div>
+          <div class="media-body answer_area">
+            <div class="answer_body">
+              The way I see it, every life is a pile of good things and bad things.…hey.…the good things don't always soften the...
+            <div class="answer_details"> answered by
+              <a class="answer_author" href="#">drwhofan</a>
+              on
+              <span class="answer_date">05/20/6969</span>
+              at
+              <span class="answer_hour">20:01</span>
+            </div>
+            <div class="answer_votes">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br>
+    <div class="answer">
+      <div class="media">
+        <div class="media-left">
+          <a href="#">
+            <img class="media-object user_profile_pic" src="http://placehold.it/64x64" alt="user_image" height="50px">
+          </a>
+        </div>
+        <div class="media-body answer_area">
+          <div class="answer_body">
+            I'm not sure about that hm hm no no...
+          <div class="answer_details"> answered by
+            <a class="answer_author" href="#">drwhofan</a>
+            on
+            <span class="answer_date">05/20/6969</span>
+            at
+            <span class="answer_hour">20:01</span>
+          </div>
+          <div class="answer_votes">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 	</div>
-  
+
   </div>
 </div>
 
