--- a/question.html
+++ b/question.html
@@ -28,6 +28,11 @@
 
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
+	  
+		<button type="button" class="navbar-toggle collapsed extras_btn" data-toggle="collapse" data-target=".extras" aria-expanded="false">
+          <span>Toggle Question Toolbar</span>
+        </button>
+	  
         <!-- Toggle shows only on mobile or small screens -->
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
@@ -83,10 +88,36 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<div class="container">
+<div class="container">	
+	
   <div class="row">
 
-    <div class="col-lg-8 question_area">
+	<div class="extras col-sm-4 col-lg-push-8 col-md-push-8 col-sm-push-8">
+
+      <label class="tools_label"> tools <span class="glyphicon glyphicon-wrench"></span></label>
+      <hr>
+      <div class="extras_tools">
+        <button type="button" class="btn btn-default">
+          <span aria-hidden="true"> answer</span>
+        </button>
+        <button type="button" class="btn btn-default">
+          <span aria-hidden="true"> ask a question</span>
+        </button>
+      </div>
+      <hr>
+	  <div class="extras_suggested">
+		<label class="related_label"> related questions </label>
+		<ul class="list-group" >
+			<li><a class="list-group-item suggestion" href="#">Sup fam?<span class="badge">12</span></a></li>
+			<li><a class="list-group-item suggestion" href="#">How are mirrors real if our eyes aren't real?<span class="badge">30</span></a></li>
+			<li><a class="list-group-item suggestion" href="#">How does css work tho?<span class="badge">1k</span></a></li>
+			<li><a class="list-group-item suggestion" href="#">Olá gatos dão nº?<span class="badge">59</span></a></li>
+		</ul>
+	  </div>
+	  <hr>
+    </div>
+  
+    <div class="col-sm-8 question_area col-lg-pull-4 col-md-pull-4 col-sm-pull-4">
       <div class="question">
         <div class="media">
           <div class="media-left">
@@ -101,7 +132,7 @@
               on
               <span class="question_date">04/20/6969</span>
               in
-              <a class="question_topic" href="#">lifestyle</a>
+              <a class="question_topic" href="#">lifestyle</a>			  
             </div>
             <hr>
             <div class="question_body">
@@ -134,22 +165,6 @@
       </div>
 
       <hr>
-    </div>
-
-    <div class="col-lg-4 extras">
-
-      <label class="tools_label"> tools <span class="glyphicon glyphicon-wrench"></span></label>
-      <hr>
-      <div class="extras_tools">
-        <button type="button" class="btn btn-default">
-          <span aria-hidden="true"> answer</span>
-        </button>
-        <button type="button" class="btn btn-default">
-          <span aria-hidden="true"> ask a question</span>
-        </button>
-      </div>
-      <hr>
-
     </div>
 
     <div class="col-lg-8 answers">
