Register page done

--- a/question.html
+++ b/question.html
@@ -28,11 +28,11 @@
 
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-	  
+
 		<button type="button" class="navbar-toggle collapsed extras_btn" data-toggle="collapse" data-target=".extras" aria-expanded="false">
           <span>Toggle Question Toolbar</span>
         </button>
-	  
+
         <!-- Toggle shows only on mobile or small screens -->
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
@@ -88,11 +88,11 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<div class="container">	
-	
+<div class="container">
+
   <div class="row">
 
-	<div class="extras col-sm-4 col-lg-push-8 col-md-push-8 col-sm-push-8">
+	<div class="extras sidenav col-sm-4 col-lg-push-8 col-md-push-8 col-sm-push-8">
 
       <label class="tools_label"> tools <span class="glyphicon glyphicon-wrench"></span></label>
       <hr>
@@ -108,15 +108,15 @@
 	  <div class="extras_suggested">
 		<label class="related_label"> related questions </label>
 		<ul class="list-group" >
-			<li><a class="list-group-item suggestion" href="#">Sup fam?<span class="badge">12</span></a></li>
-			<li><a class="list-group-item suggestion" href="#">How are mirrors real if our eyes aren't real?<span class="badge">30</span></a></li>
-			<li><a class="list-group-item suggestion" href="#">How does css work tho?<span class="badge">1k</span></a></li>
-			<li><a class="list-group-item suggestion" href="#">Olá gatos dão nº?<span class="badge">59</span></a></li>
+			<li><a class="list-group-item suggestion" href="#">How to start up Bootstrap?<span class="badge">12</span></a></li>
+			<li><a class="list-group-item suggestion" href="#">How to line divs in CSS?<span class="badge">30</span></a></li>
+			<li><a class="list-group-item suggestion" href="#">HTML help?<span class="badge">1k</span></a></li>
+			<li><a class="list-group-item suggestion" href="#">Can't center divs<span class="badge">59</span></a></li>
 		</ul>
 	  </div>
 	  <hr>
     </div>
-  
+
     <div class="col-sm-8 question_area col-lg-pull-4 col-md-pull-4 col-sm-pull-4">
       <div class="question">
         <div class="media">
@@ -132,7 +132,7 @@
               on
               <span class="question_date">04/20/6969</span>
               in
-              <a class="question_topic" href="#">lifestyle</a>			  
+              <a class="question_topic" href="#">lifestyle</a>
             </div>
             <hr>
             <div class="question_body">
