--- a/register.html
+++ b/register.html
@@ -126,20 +126,22 @@
 
 			<hr class="colorgraph">
 			<div class="row">
-				<div class="col-xs-12 col-md-6"><input type="submit" value="Register" class="btn btn-primary btn-block btn-lg btn-warning" tabindex="7"></div>
-				<div class="col-xs-12 col-md-6"><a href="#" class="btn btn-success btn-block btn-lg btn-warning">Sign In</a></div>
+				<div class="col-xs-12 col-md-12"><input type="submit" value="Register" class="btn btn-primary btn-block btn-lg btn-warning" tabindex="7"></div>
 			</div>
+      <div class="row">
+          <div class="col-xs-12 col-md-12 already_have_account"><label>Already have an account? </label><a href="#" class="">Sign In.</a></div>
+      </div>
 
       <hr class="colorgraph">
       <div class="row">
-            <div class="col-md-2"></div>
-          	<div class="col-xs-12 col-md-8">
+            <div class="col-md-3"></div>
+          	<div class="col-xs-12 col-md-6">
               <label>or</label>
               <a class="btn btn-block btn-social btn-google">
                 <i class="fa fa-google" aria-hidden="true"></i> Sign in with Google
               </a>
             </div>
-            <div class="col-md-2"></div>
+            <div class="col-md-3"></div>
       </div>
 
 		</form>
