--- a/register.html
+++ b/register.html
@@ -38,7 +38,8 @@
 			<span class="icon-bar"></span>
 		    </button>
 		    <!-- Brand -->
-		    <a id="brand" class="navbar-brand" href="#">ask<span class="brand-highlight">hub</span></a>
+			<a class="navbar-brand" href="#">Newton's </a>
+			<a href="#" class="navbar-left"><img src="doc/images/prototype2.png" onmouseover="changeLogo()" onmouseout="resetLogo()"></a>
 		    <form id="mobile-search">
 			<input id="mobile-search-bar" type="text" class="form-control" placeholder="search">
 		    </form>
