--- a/profile.html
+++ b/profile.html
@@ -83,103 +83,68 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
+<!-- profile area -->
 <div class="container-fluid profile">
   <div class="row">
 
-	<div class="col-lg-8 ">
-      <div class="col-lg-1">
-      </div>
-      <div class="col-lg-3 media">
-            <img class="media-object user_profile_pic2" src="img/profile.png" alt="user_image" height="200em">
+	<div class="col-lg-8 media">
+    <div class="col-lg-12 profile-upper">
+      <div class="profile-image-and-info">
+        <img class=" user_profile_pic2" src="img/profile.png" alt="user_image" height="200em">
+        <div class="profile-info">
+          <br>
+          <span class="info-start">Email:</span>olaola@coldmail.com
+          <br>
+          <span class="info-start">Name:</span>Joaquim
+          <br>
+          <span class="info-start">Surname:</span>Joao
+        </div>
       </div>
 
-      <div class="col-lg-8">
-        <div class="profile-username">
+      <div class="profile-user-and-desc">
+      <div class="media-body profile-username">
           mlady
-        </div>
-        <div class="profile-desc">
+      </div>
+      <div class="profile-desc">
           Prism letterpress farm-to-table, food truck butcher seitan tilde tacos glossier affogato activated charcoal kombucha dreamcatcher. Copper mug wayfarers tumeric snackwave normcore, freegan kitsch organic humblebrag kickstarter hella quinoa skateboard. Jean shorts ethical pug, fashion axe wayfarers trust fund YOLO man bun live-edge af brunch mumblecore fam actually thundercats. Master cleanse VHS pork belly, flannel live-edge glossier man bun. Aesthetic celiac you probably haven't heard of them.
         </div>
       </div>
+    </div>
+    <div class="col-lg-12 profile-down">
 
+      <div class="col-lg-3 profile-topics">
+        Most frequented topics <hr>
+        <ul class="">
+          <li><a href="#">Programming</a></li>
+          <li><a href="#">Cooking</a></li>
+          <li><a href="#">Suicide watch</a></li>
+          <li><a href="#">Mathematics</a></li>
+        </ul>
+      </div>
+
+    </div>
   </div>
 
 	<div class="col-lg-4 container-fluid">
-    <div class="col-lg-12 question_area">
-      Questions <span class="answer_no">(1)</span>
-      <div class="question">
-        <div class="media">
-          <div class="media-left">
-            <a href="#">
-              <img class="media-object user_profile_pic" src="http://placehold.it/64x64" alt="user_image">
-            </a>
-          </div>
-          <div class="media-body question_area">
-            <h3 class="media-heading"> Lumbersexual tacos tbh authentic vaporware, meditation flexitarian tilde vegan roof party gochujang pickled? </h3>
-            <div class="question_details"> asked by
-              <a class="question_author" href="#">mlady</a>
-              on
-              <span class="question_date">04/20/6969</span>
-              in
-              <a class="question_topic" href="#">lifestyle</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <hr>
-    </div>
-    <div class="col-lg-12 answer_area">
-      Answers<span class="answer_no">(1)</span>
-      <div class="answer">
-        <div class="media">
-          <div class="media-left">
-            <a href="#">
-              <img class="media-object user_profile_pic" src="http://placehold.it/64x64" alt="user_image" height="50px">
-            </a>
-          </div>
-          <div class="media-body answer_area">
-            <div class="answer_body">
-              The way I see it, every life is a pile of good things and bad things.…hey.…the good things don't always soften the...
-            <div class="answer_details"> answered by
-              <a class="answer_author" href="#">drwhofan</a>
-              on
-              <span class="answer_date">05/20/6969</span>
-              at
-              <span class="answer_hour">20:01</span>
-            </div>
-            <div class="answer_votes">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <br>
-    <div class="answer">
-      <div class="media">
-        <div class="media-left">
-          <a href="#">
-            <img class="media-object user_profile_pic" src="http://placehold.it/64x64" alt="user_image" height="50px">
-          </a>
-        </div>
-        <div class="media-body answer_area">
-          <div class="answer_body">
-            I'm not sure about that hm hm no no...
-          <div class="answer_details"> answered by
-            <a class="answer_author" href="#">drwhofan</a>
-            on
-            <span class="answer_date">05/20/6969</span>
-            at
-            <span class="answer_hour">20:01</span>
-          </div>
-          <div class="answer_votes">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-	</div>
+    <div class="extras_suggested">
+		<label class="related_label"> User questions </label>
+		<ul class="list-group" >
+			<li><a class="list-group-item suggestion" href="#">How to start up Bootstrap?<span class="badge">12</span></a></li>
+			<li><a class="list-group-item suggestion" href="#">How to line divs in CSS?<span class="badge">30</span></a></li>
+			<li><a class="list-group-item suggestion" href="#">HTML help?<span class="badge">1k</span></a></li>
+			<li><a class="list-group-item suggestion" href="#">Can't center divs<span class="badge">59</span></a></li>
+		</ul>
+	  </div>
+    <hr>
+    <div class="extras_suggested">
+		<label class="related_label"> User answers </label>
+		<ul class="list-group" >
+			<li><a class="list-group-item suggestion" href="#">Yes, you can charge your phone in the microwave. <span class="badge"></span></a></li>
+			<li><a class="list-group-item suggestion" href="#">No that's illegal.<span class="badge"></span></a></li>
+			<li><a class="list-group-item suggestion" href="#">How would i know.<span class="badge"></span></a></li>
+			<li><a class="list-group-item suggestion" href="#">Yes cups are used for that too.<span class="badge"></span></a></li>
+		</ul>
+	  </div>
 
   </div>
 </div>
