--- a/profile.html
+++ b/profile.html
@@ -90,7 +90,7 @@
 	<div class="col-lg-8 media">
     <div class="col-lg-12 profile-upper">
       <div class="profile-image-and-info">
-        <img class=" user_profile_pic2" src="img/profile.png" alt="user_image" height="200em">
+        <img class=" user_profile_pic2" src="img/profile.png" alt="user_image" height="200em" style="margin-right:1.5em">
         <div class="profile-info">
           <br>
           <span class="info-start">Email:</span>olaola@coldmail.com
