--- a/profile.html
+++ b/profile.html
@@ -122,13 +122,13 @@
       </div>
   </nav>
 <!-- profile area -->
-<div class="container-fluid profile">
+<div class="container profile">
   <div class="row">
 
 	<div class="col-lg-8 media">
     <div class="col-lg-12 profile-upper">
       <div class="profile-image-and-info">
-        <img class=" user_profile_pic2" src="img/profile.png" alt="user_image" height="200em" style="margin-right:1.5em">
+        <img class=" user_profile_pic2" src="img/profile.png" alt="user_image" height="200em">
         <div class="profile-info">
           <br>
           <span class="info-start">Email:</span>olaola@coldmail.com
@@ -150,8 +150,8 @@
     </div>
     <div class="col-lg-12 profile-down">
 
-      <div class="col-lg-3 profile-topics">
-        Most frequented topics <hr>
+      <div class="col-lg-4 profile-topics">
+        <label class="related_label" style="font-size:1.2em;">Most frequented topics</label> <hr>
         <ul class="">
           <li><a href="#">Programming</a></li>
           <li><a href="#">Cooking</a></li>
@@ -163,7 +163,7 @@
     </div>
   </div>
 
-	<div class="col-lg-4 container-fluid">
+	<div class="col-lg-4 container-fluid profile-q-and-a">
     <div class="extras_suggested">
 		<label class="related_label"> User questions </label>
 		<ul class="list-group" >
