--- a/profile.html
+++ b/profile.html
@@ -129,6 +129,9 @@
     <div class="col-lg-12 profile-upper">
       <div class="profile-image-and-info">
         <img class=" user_profile_pic2" src="img/profile.png" alt="user_image" height="200em">
+		<div class="profile-user-score">
+			<center>12.000 U.S.</center>
+		</div>
         <div class="profile-info">
           <br>
           <span class="info-start">Email:</span>olaola@coldmail.com
@@ -136,6 +139,14 @@
           <span class="info-start">Name:</span>Joaquim
           <br>
           <span class="info-start">Surname:</span>Joao
+          <br>
+          <span class="info-start">Country:</span>Rwanda
+		  <br>
+			<span class="label label-default">2 years club</span>
+			<span class="label label-primary">200 questions</span>
+			<br>
+			<span class="label label-success">400 answers</span>
+			<span class="label label-info">10k user score </span>
         </div>
       </div>
 
