--- a/question.html
+++ b/question.html
@@ -35,8 +35,7 @@
           <span class="icon-bar"></span>
         </button>
         <!-- Brand -->
-        <a class="navbar-brand" href="#">Newton's </a>
- 			<a href="#" class="navbar-left"><img src="doc/images/prototype2.png" onmouseover="changeLogo()" onmouseout="resetLogo()"></a>
+        <a class="navbar-brand" id="brand" href="#">Newton's<a href="#" class="navbar-left"><img src="doc/images/prototype2.png" onmouseover="changeLogo()" onmouseout="resetLogo()"></a> </a>
         <form id="mobile-search">
           <input id="mobile-search-bar" type="text" class="form-control" placeholder="search">
         </form>
